--- a/template/doc.css
+++ b/template/doc.css
@@ -12,7 +12,15 @@ ul {
    list-style: none;
 }
 a {
-   
+
+}
+
+em {
+   font-style: italic;
+}
+
+strong {
+   font-weight: bold;
 }
 
 /* Layout */
@@ -102,7 +110,6 @@ h1 code, h2 code {
    width: 80%;
 }
 #main div:hover {
-/*   background-color: #EEE;*/
    border-right: 3px solid #777;
 }
 #main div h4 {
@@ -111,15 +118,28 @@ h1 code, h2 code {
 #main div h4 ~ p {
    padding-left: 1em;
 }
-#main p code {
-   background-color: #F7F7F7;
-   padding: 0 0.1em;
-}
 #main p a code {
-   background-color: #F7F7F7;
-   border-bottom: 1px solid #AAA;
-   color: #350001;
+   background-color: #FFF;
+   color: #780002;
 }
+#main p a code:hover {
+   border-bottom: 1px dotted #780002;
+}
+#main ul {
+   list-style-type: square;
+}
+#main ul ul {
+   list-style-type: none;
+}
+#main ul ul li {
+   margin-left: -1em;
+}
+#main ul ul li::before {
+   content: "- ";
+   margin-left: -1em;
+   padding-right: 0.5em;
+}
+
 
 p {
    margin-bottom: 0.8em;
