--- a/template/module.handlebars
+++ b/template/module.handlebars
@@ -34,7 +34,7 @@
         <p>Author(s): {{{authorLinks module.author}}}<p>
         {{{module.description}}}
       </div>
-      {{#each contents}}
+      {{#each sortedContents}}
       <div>
         {{#if fullName}}<h4 id="{{makeLink fullName}}"><code>{{makeText fullName}}</code></h4>{{/if}}
         {{{description}}}
