Fix how properties appear in module vs. class. close #13

--- a/template/module.handlebars
+++ b/template/module.handlebars
@@ -36,7 +36,7 @@
       </div>
       {{#each sortedContents}}
       <div>
-        {{#if fullName}}<h4 id="{{makeLink fullName}}"><code>{{makeText fullName}}</code></h4>{{/if}}
+        {{#if fullName}}<h4 id="{{makeLink fullName}}"><code>{{fullName}}</code></h4>{{/if}}
         {{{description}}}
       </div>
       {{/each}}
