--- a/template/module.handlebars
+++ b/template/module.handlebars
@@ -3,6 +3,14 @@
   <head>
     <link rel="stylesheet" href="doc.css" type="text/css" media="screen" title="no title" charset="utf-8">
     <title>{{module.name}}</title>
+    <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+    });
+    </script>
+    <script type="text/javascript" async
+      src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
   </head>
   <body>
     <div id="header">
