--- a/template/module.handlebars
+++ b/template/module.handlebars
@@ -23,7 +23,7 @@
         <h3>Module Index</h3>
       <ul>
         {{#each allModules}}
-        <a href="{{module.name}}.html"><li><code>{{module.name}}</code></li></a>
+        <a href="{{module.name}}.html"><li class="depth{{module.depth}}"><code>{{module.name}}</code></li></a>
         {{/each}}
       </ul>
       </div>
