--- a/template/module.handlebars
+++ b/template/module.handlebars
@@ -40,12 +40,12 @@
       <div class="moduleInfo">
         <h2>Module <code>{{module.name}}</code></h2>
         <p>Author(s): {{{authorLinks module.author}}}<p>
-        {{{module.description}}}
+        {{{module.multiPageDesc}}}
       </div>
       {{#each sortedContents}}
       <div>
         {{#if fullName}}<h4 id="{{makeLink fullName}}"><code>{{fullName}}</code></h4>{{/if}}
-        {{{description}}}
+        {{{multiPageDesc}}}
       </div>
       {{/each}}
     </div>
